test/testdata/e2e/tcp_proxy_multi_chain/virtual-service.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: VirtualService
metadata:
  name: tcp-proxy-multi-chain
  annotations:
    envoy.kaasops.io/node-id: test
spec:
  listener:
    name: tcp-proxy-multi-chain
